rebrand: rename all projects and terminal to cmd-play, update welcome message, and unify naming

--- a/game-terminal/package.json
+++ b/game-terminal/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "game-terminal",
+  "name": "cmd-play",
   "version": "1.0.0",
   "description": "Terminal-style game launcher for educational games",
   "main": "index.js",
